fixed overflow issues

--- a/public/styles/_projects.scss
+++ b/public/styles/_projects.scss
@@ -1,9 +1,10 @@
 #projects-main {
   @include flex(column, center, center);
-  width: 100vw;
+  //   width: 100vw;
   height: 100vh;
   padding: 20px 0px;
   padding-top: 200px;
+  margin: 0;
   opacity: 0;
   transition: opacity 0.8s;
 
@@ -57,9 +58,9 @@
     width: 100%;
     min-height: 100%;
     padding-bottom: 50px;
-    // background-color: rgb(48, 47, 47);
     display: grid;
     gap: 10px;
+
     grid-template-columns: repeat(4, 1fr);
 
     @media screen and (max-width: 1350px) {
@@ -94,10 +95,10 @@
         border-radius: 0;
 
         &:nth-child(2n) {
-          transform: translateX(100%) translateY(0);
+          transform: none;
         }
         &:nth-child(2n + 1) {
-          transform: translateX(-100%) translateY(0);
+          transform: none;
         }
       }
       div {
@@ -108,6 +109,7 @@
         transition: transform 0.5s, opacity 1s;
         transition-delay: 0.7s;
         opacity: 0;
+
         img {
           position: absolute;
           left: 50%;
@@ -115,14 +117,14 @@
           transform: translate(-50%, -50%);
 
           &:first-child {
-            border-radius: 25px;
+            border-radius: 20px;
             box-shadow: 0px 0px 20px white;
           }
         }
 
         article {
           height: 86%;
-          width: 190px;
+          aspect-ratio: 1/2.1;
           border-radius: 20px;
           position: absolute;
           top: 50%;
